# telegram_bot

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_main.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feature_Request.md
.github/workflows/: pythonpackage.yml
app/: dialogue_manager.py  main.py
bot/: __init__.py  bot_handler.py
tests/: test_bot.py  test_main.py
