[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = "Telegram Bot"
authors = ["daisukixci <daisuki@tuxtrooper.com>"]

[tool.poetry.dependencies]
python = "^3.9"
croniter = "^1.1.0"
PyYAML = "^6.0"
requests = "^2.27.0"
dokuwiki = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
